web-infras/parser/tests/fixtures/babel/es2016/exponentiation-operator/16/output.txt
[SyntaxError]: Illegal expression. Wrap left hand side or entire exponentiation in parentheses (1,2)
1|(-5 ** 6);
 |^
